--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -107,7 +107,7 @@
         <!-- Product 3 -->
         <div class="col-md-4 mb-4">
             <div class="card product-card" data-name="Laptop" data-price="75000" data-image="/images/laptop.jpg">
-                <img src="/images/laptop.jpg" class="card-img-top product-image" alt="Laptop">
+                <img src="src/main/resources/images/laptop.jpg" class="card-img-top product-image" alt="Laptop">
                 <div class="card-body text-center">
                     <h5 class="product-title">Laptop</h5>
                     <p class="product-price">Price: $750.00</p>
@@ -127,7 +127,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-    const stripe = Stripe("PROVIDE YOUR KEY");
+    const stripe = Stripe("pk_test_51RErQPFQHsVcIXc8GkvOYa9AlNno0ytKaGboDPLpFaJH3eJRRDhpfHLiHoGMYqGZ7p9hqISzTQUTgKLWqYDZyP1O001NHJKZ5v");
 
     document.querySelectorAll(".product-card").forEach(card => {
         const decrementBtn = card.querySelector(".decrement");
@@ -174,7 +174,7 @@
                 };
 
                 // Send request to backend
-                const response = await fetch("/product/v1/checkout", {
+                const response = await fetch("/api/v1/checkout", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json"
